# zeddihub-teamspeak-addons

./: .gitignore  PLUGIN_IDEAS.md  README.md  build_all.ps1  build_installers.ps1  generate_icons.ps1  package_ts3_plugins.ps1  package_zips.ps1  refresh_per_plugin_repos.ps1  reorganize_releases.ps1  split_repos.ps1
AutoReconnect/: CMakeLists.txt
AutoReconnect/src/: plugin.cpp
Follow/: CLAUDE.md  CMakeLists.txt
Follow/src/: plugin.cpp
GreetingBot/: CMakeLists.txt
GreetingBot/src/: plugin.cpp
MoveSpam/: CLAUDE.md  CMakeLists.txt
MoveSpam/src/: custom_dialog.cpp  custom_dialog.h  move_engine.cpp  move_engine.h  plugin.cpp
Soundboard/: CMakeLists.txt
Soundboard/src/: audio_converter.cpp  audio_converter.h  audio_engine.cpp  audio_engine.h  plugin.cpp  sound_slot.h  soundboard_dialog.cpp  soundboard_dialog.h
VoiceChanger/: CLAUDE.md  CMakeLists.txt
VoiceChanger/src/: plugin.cpp  settings_dialog.cpp  settings_dialog.h  voice_engine.cpp  voice_engine.h
common/: zh_brand.h
installer/: template.iss
pokebot/: .gitignore  CMakeLists.txt  README.md
pokebot/src/: custom_dialog.cpp  plugin.cpp  presets.h
ts3_plugins/: Follow-v1.3.0-TS3-3.5.0-api23.ts3_plugin  Follow-v1.3.0-TS3-3.5.1-3.5.5-api24.ts3_plugin  Follow-v1.3.0-TS3-3.5.6-api25.ts3_plugin  Follow-v1.3.0-TS3-3.6+-api26.ts3_plugin  MoveSpam-v1.3.0-TS3-3.5.0-api23.ts3_plugin  MoveSpam-v1.3.0-TS3-3.5.1-3.5.5-api24.ts3_plugin  MoveSpam-v1.3.0-TS3-3.5.6-api25.ts3_plugin  MoveSpam-v1.3.0-TS3-3.6+-api26.ts3_plugin  Soundboard-v1.0.0-TS3-3.5.0-api23.ts3_plugin  Soundboard-v1.0.0-TS3-3.5.1-3.5.5-api24.ts3_plugin  Soundboard-v1.0.0-TS3-3.5.6-api25.ts3_plugin  Soundboard-v1.0.0-TS3-3.6+-api26.ts3_plugin  pokebot-v1.3.0-TS3-3.5.0-api23.ts3_plugin  pokebot-v1.3.0-TS3-3.5.1-3.5.5-api24.ts3_plugin  pokebot-v1.3.0-TS3-3.5.6-api25.ts3_plugin  pokebot-v1.3.0-TS3-3.6+-api26.ts3_plugin
